hphp/hack/test/typecheck/is_expression/primitive_union.php.exp
File "primitive_union.php", line 9, characters 19-20:
Invalid argument (Typing[4110])
  File "primitive_union.php", line 13, characters 26-33:
  This is an array key (int/string)
  File "primitive_union.php", line 3, characters 15-19:
  It is incompatible with a mixed value
File "primitive_union.php", line 10, characters 14-15:
Invalid argument (Typing[4110])
  File "primitive_union.php", line 14, characters 21-23:
  This is a num (int/float)
  File "primitive_union.php", line 3, characters 15-19:
  It is incompatible with a mixed value
